# openloop

./: .env.broker.example  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.broker.yml  docker-compose.deploy.yml  docker-compose.sandbox.yml  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  runtime-github-live-e2e.yml  slack-live-e2e.yml
agents/: dev-platform.yaml
docker/: analysis.Dockerfile
docs/adr/: 0001-surface-message-standards.md  0002-authenticated-container-intent-broker.md  0003-capability-authenticated-openhands-relay.md  0004-receipt-gated-openhands-generation-lifecycle.md  README.md
docs/operations/: retire-analysis-worker.md
ops/postgres/: 2026-07-22-audit-analysis-worker.sql  2026-07-22-retire-analysis-worker.sql
src/openloop/: __init__.py  app.py  broker_main.py  broker_provision.py  cli.py  config.py  deliverable.py  postgres.py  testing.py
tests/: conftest.py  coverage.mermaid
tests/e2e/: test_analysis_retirement.py  test_coding_worker_live.py  test_postgres.py  test_runtime_github_live.py  test_slack_socket_live.py
tests/integration/: test_analysis_worker_docker.py  test_analysis_worker_wiring.py  test_app_composition.py  test_approval_persistence.py  test_broker_canary_external.py  test_broker_entrypoint.py  test_broker_postgres_integration.py  test_broker_rpc_live.py  test_broker_rpc_postgres_integration.py  test_broker_rpc_uds.py  test_broker_runtime_docker_live.py  test_broker_start_segment_postgres.py  test_broker_start_segment_uds.py  test_broker_wiring.py  test_broker_workspace_adapter.py  test_coding_worker_approvals.py  test_coding_worker_durability.py  test_coding_worker_git.py  test_coding_worker_workflow.py  test_compose_broker_config.py  test_compose_sandbox_config.py  test_coordination_wiring.py  test_mcp.py  test_observability_api.py  test_openhands_broker_canary_live.py  test_openhands_cold_resume_live.py  test_openhands_hardened_workspace.py  test_openhands_relay_live.py  test_pipeline_memory.py  test_postgres_pool_wiring.py  test_runtime.py  test_runtime_workflow.py  test_sandbox_docker.py  test_sandbox_sealed_docker.py  test_sandbox_wiring.py  test_slack_approvals.py  test_slack_mention.py  test_slack_payload.py  test_slack_transport.py  test_tool_loop.py  (+6 more)
tests/support/: Dockerfile.broker-rpc-probe  agents.py  (+11 more)
(+200 files in other folders)
