[project]
name = "pyopenloop"
version = "0.0.1"
description = "The open-source control plane and runtime for team AI agents"
authors = [
  { name = "Artur Maciag", email = "maciag.artur@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "litellm>=1.40",
    "slack-bolt>=1.18",
    # chat_postMessage(markdown_text=...) — standard-Markdown rendering — needs 3.33+.
    "slack-sdk>=3.33",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
mcp = [
    "mcp>=1.0",
]
redis = [
    "redis>=5.0",
]
githubapp = [
    "pyjwt[crypto]>=2.8",
]
# The heavy agentic worker backend (CODING_WORKER_BACKEND=openhands).
# openhands-workspace is only needed for the docker-mounted runtime.
# The SDK needs Python >=3.12 (the project floor stays 3.11; on 3.11 the
# extra resolves empty and the backend probe fails closed at boot).
openhands = [
    # Pin the server package directly: openhands-workspace only declares a
    # compatible lower bound, so plain pip would otherwise install a newer
    # agent-server than the private 1.31.0 adapter supports.
    "openhands-agent-server==1.31.0; python_version >= '3.12'",
    "openhands-sdk==1.31.0; python_version >= '3.12'",
    "openhands-tools==1.31.0; python_version >= '3.12'",
    "openhands-workspace==1.31.0; python_version >= '3.12'",
    # Direct dependency: Phase 0 workspace artifacts use streaming AES-256-GCM.
    "cryptography>=42; python_version >= '3.12'",
]

[project.scripts]
openloop = "openloop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated unit tests",
    "integration: in-process tests spanning runtime boundaries with fakes",
    "e2e: end-to-end tests spanning runtime boundaries",
    "postgres: tests that require reachable Postgres/pgvector",
    "live: tests that hit external model/provider or GitHub services",
]
